--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,11 +47,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 코드 체크아웃
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # 2. 원격 서버 배포
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v0.1.4
         with:
@@ -76,8 +74,7 @@ jobs:
             docker-compose -f docker-compose_prod.yml down --remove-orphans || { echo "Failed to stop existing containers"; exit 1; }
 
             echo "############# DOCKER SYSTEM AND VOLUME PRUNE #############"
-            # 불필요한 Docker 데이터 정리
             docker system prune -a --volumes -f || { echo "Failed to prune Docker system!"; exit 1; }
 
-            # 컨테이너 빌드 및 시작
+            echo "############# DOCKER-COMPOSE UP #############"
             docker-compose -f docker-compose_prod.yml up -d --build --remove-orphans || { echo "Failed to build and start Docker Compose! Exiting."; exit 1; }
