--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,9 +47,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - name: Check out repository
         uses: actions/checkout@v2
 
+      # 2. 원격 서버 배포
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v0.1.4
         with:
@@ -76,5 +78,5 @@ jobs:
             echo "############# DOCKER SYSTEM AND VOLUME PRUNE #############"
             docker system prune -a --volumes -f || { echo "Failed to prune Docker system!"; exit 1; }
 
-            echo "############# DOCKER-COMPOSE UP #############"
+            # 컨테이너 빌드 및 시작
             docker-compose -f docker-compose_prod.yml up -d --build --remove-orphans || { echo "Failed to build and start Docker Compose! Exiting."; exit 1; }
