--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,25 +12,58 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - name: Check out repository
         uses: actions/checkout@v2
 
+      # 2. Node.js 설정
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.17.0'
 
-      - name: Install dependencies
-        run: npm install
+      # 3. judger-frontend 의존성 캐시 복원 및 설치
+      - name: Restore npm cache for frontend
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-frontend-${{ hashFiles('judger-frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-frontend-
+
+      - name: Install dependencies for frontend
+        run: npm ci
         working-directory: ./judger-frontend
 
-      - name: Run lint
+      - name: Run lint for frontend
         run: npm run lint
         working-directory: ./judger-frontend
 
-      # - name: Run tests
-      #   run: npm test
-      #   working-directory: ./judger-frontend
+      # 4. judger-backend/judger 의존성 캐시 복원 및 설치
+      - name: Restore npm cache for backend judger
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-judger-${{ hashFiles('judger-backend/judger/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-judger-
+
+      - name: Install dependencies for backend judger
+        run: npm ci
+        working-directory: ./judger-backend/judger
+
+      # 5. judger-backend/judger-api 의존성 캐시 복원 및 설치
+      - name: Restore npm cache for backend judger-api
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-judger-api-${{ hashFiles('judger-backend/judger-api/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-judger-api-
+
+      - name: Install dependencies for backend judger-api
+        run: npm ci
+        working-directory: ./judger-backend/judger-api
 
   cd:
     name: Continuous Deployment
@@ -38,9 +71,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - name: Check out repository
         uses: actions/checkout@v2
 
+      # 2. 원격 서버 배포
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v0.1.4
         with:
@@ -65,8 +100,8 @@ jobs:
             docker-compose -f docker-compose_prod.yml down --remove-orphans || { echo "Failed to stop existing containers"; exit 1; }
 
             echo "############# DOCKER SYSTEM AND VOLUME PRUNE #############"
-            docker system prune -f || { echo "Failed to prune Docker system!"; }
-            docker volume prune -f || { echo "Failed to prune Docker volumes!"; }
+            docker system prune -a --volumes -f || { echo "Failed to prune Docker system!"; exit 1; }
+            docker volume rm $(docker volume ls -q) || { echo "Failed to remove all Docker volumes!"; exit 1; }
 
-            echo "############# DOCKER-COMPOSE UP #############"
+            # 컨테이너 빌드 및 시작
             docker-compose -f docker-compose_prod.yml up -d --build --remove-orphans || { echo "Failed to build and start Docker Compose! Exiting."; exit 1; }
