--- a/judger-frontend/package.json
+++ b/judger-frontend/package.json
@@ -19,6 +19,7 @@
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.4",
+    "@next/bundle-analyzer": "^15.1.3",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.19",
     "@tanstack/react-query-next-experimental": "^5.17.19",
