--- a/judger-frontend/package.json
+++ b/judger-frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
@@ -63,6 +64,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-sitemap": "^4.2.3",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
