chore: 불필요 라이브러리 제거

--- a/judger-frontend/package.json
+++ b/judger-frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
@@ -31,11 +32,9 @@
     "@uiw/react-codemirror": "^4.21.24",
     "@uiw/react-markdown-preview": "^4.1.13",
     "@uiw/react-md-editor": "3.6.0",
-    "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
-    "ckeditor5-custom-build": "file:./ckeditor5",
     "cookies-next": "^4.1.1",
     "dayjs": "^1.11.8",
     "eslint": "8.40.0",
