--- a/judger-frontend/package.json
+++ b/judger-frontend/package.json
@@ -35,6 +35,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
+    "ckeditor5-custom-build": "file:./ckeditor5",
     "cookies-next": "^4.1.1",
     "dayjs": "^1.11.8",
     "eslint": "8.40.0",
